# cosette

./: README.md  params_lists.json  pyproject.toml
src/cosette/: __init__.py  reading_utils.py  varie.py
